# Spaceship_Titanic_Pipeline

./: README.md  pyproject.toml  requirements.txt  requirementss.txt
apps/: app_streamlit_manual.py  app_streamlit_pipeline.py
artifacts/: logreg_model.pkl  model.pkl  pipeline_model.pkl  preprocessor.pkl
spaceship_titanic_pipeline/models/: evaluation.py  train_model.py
spaceship_titanic_pipeline/src/models/: train_model.py
spaceship_titanic_pipeline/src/pipeline/: pipeline.py
src/data/: data_ingestion.py
src/features/: pre_processing.py  preprocessing.py
src/models/: train.py  train_model.py
src/pipeline/: pipeline.py  pipeline_manual.py
