[project]
name = "spaceship_titanic_pipeline"
version = "0.1.0"

[build-system]
requires = ["setuptools==69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

packages = ["spaceship_titanic_pipeline"]

[tool.setuptools.package-data]
"*" = ["*"]
