[build-system]
requires = ["setuptools==69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spaceship_titanic_pipeline"
version = "0.1.0"
description = "Spaceship Titanic Pipeline"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["spaceship_titanic_pipeline"]